--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -16,6 +16,7 @@
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
   - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
   - [209. 长度最小的子数组](#209-长度最小的子数组)
+  - [862. 和至少为 K 的最短子数组 [Hard]](#862-和至少为-k-的最短子数组-hard)
   - [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
   - [718. 最长重复子数组](#718-最长重复子数组)
 - [前缀和解题技巧](#前缀和解题技巧)
@@ -686,7 +687,8 @@ int maxPoints(vector<int>& nums, int len) {
 
 
 ### 209. 长度最小的子数组
-- 计算数组中和大于目标值的最小长度的连续子数组
+- 计算**数组中和大于目标值的最小长度的连续子数组**
+  - **全为正整数**
 - 做法一： 前缀和 + 二分搜索
   - 计算各位置的前缀和，由于前缀和数组是有序的，可以通过二分搜索的方法来查找后续是否有满足target和要求的前缀和
   - 时间复杂度 O(nlogn) 空间复杂度 O(n)
@@ -756,18 +758,59 @@ public:
     }
 };
 ```
+### 862. 和至少为 K 的最短子数组 [Hard]
+> 返回 A 的最短的非空连续子数组的长度，该子数组的和至少为 K 。
+如果没有和至少为 K 的非空子数组，返回 -1 。 数组元素包括负数
 
+- 比LC209只差在数据范围上，问题难度直接上来了。
+  - 在LC209中的滑窗方法没法使用，但通用的**前缀和+二分搜索仍然适用**
+
+- 先构建前缀和数组， **结合之前多次前缀和的使用，需要创建[n+1]大小的数组，首元素为0**
+- 对前缀和进行遍历，搜索： `presum[i] - presum[j] > k`的情况，为了降低复杂度，这里使用单调队列的思想：
+  - 使用队列记录当前前缀和的索引，构建递减前缀和，每次从前缀和大的位置向后进行结果更新；
+  - 当前前缀和比队列尾部的前缀和还小的话，进行队列尾部出队操作
+  - 因为：目标是计算满足和的最短数组，由于负数的存在，存在当前前缀和小于之前前缀和的情况，这种情况下的子数组长度更短，因此要进行一个递减式的单调队列维护
+- 时间复杂度： O(N) 空间复杂度O(N)
+- 关键点： **`前缀和 + 单调序列 deque`**
+```c++
+class Solution {
+public:
+    int shortestSubarray(vector<int>& nums, int k) {
+        if (nums.empty()) return -1;
+        vector<int> prefix;
+        int pre = 0;
+        prefix.push_back(0);
+        for (auto p : nums) {
+            prefix.push_back(p + pre);
+            pre = prefix.back();
+        }
+        int ans = prefix.size() + 1;
+        deque<int> q; // 使用双向队列进行数据存储
+        for (int i = 0; i < prefix.size(); i++) {
+            while (!q.empty() && prefix[i] - prefix[q.front()] >= k) {
+                ans = min(ans, i - q.front());
+                q.pop_front();
+            }
+            while (!q.empty() && prefix[i] <= prefix[q.back()]) {
+                q.pop_back();
+            }
+            q.push_back(i);
+        }
+        return ans == prefix.size() + 1 ? -1 : ans;
+    }
+};
+```
 
 ### 293. 滑动窗口最大值 [Hard] *
 > 一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位，求每个窗口的最大值
 
 
-- 双向队列解题
+- **双向队列解题**
   - deque<int>window，用于存储下标。这个变量有以下特点:
   - 变量的最前端（也就是 window.front()）是**此次遍历的最大值的下标**
   - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
   - 双项队列中的所有值都要在窗口范围内
-- 关键逻辑： **元素入队操作和队列合法判断**
+- 关键逻辑： **元素入队操作和队列合法判断**  **双向队列 deque**
 - 时间复杂度 O(N) 空间复杂度O(k)
 ```c++
 class Solution {
