--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -21,6 +21,7 @@
   - [213. 打家劫舍 II](#213-打家劫舍-ii)
   - [337. 打家劫舍 III](#337-打家劫舍-iii)
 - [Others](#others)
+  - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
   - [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
   - [62. 不同路径 [Medium]](#62-不同路径-medium)
@@ -712,6 +713,56 @@ public:
 };
 ```
 ## Others
+
+### 10. 正则表达式 [Hard *]
+> 给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+'.' 匹配任意单个字符
+'*' 匹配零个或多个前面的那一个元素
+所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
+
+
+```
+输入：s = "aa" p = "a*"
+输出：true
+解释：因为 '*' 代表可以匹配零个或多个前面的那一个元素, 在这里前面的元素就是 'a'。因此，字符串 "aa" 可被视为 'a' 重复了一次
+```
+
+
+```c++
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        s = " " + s;
+        p = " " + p; // 防止 c* 或者 /n 的情况
+        int m = s.size();
+        int n = p.size();
+        vector<vector<int>> dp(m + 1, vector<int>(n + 1));
+        dp[0][0] = 1;
+        for (int i = 1; i <= m; i++) {
+            for (int j = 1; j <= n; j++) {
+                // 
+                if (s[i - 1] == p[j - 1] || p[j - 1] == '.') {
+                    dp[i][j] = dp[i - 1][j - 1];
+                }
+                else if (p[j - 1] == '*') {
+                    // 考察p串前一个字符  无法匹配的情况下，*匹配0次
+                    if (p[j - 2] != s[i - 1] && p[j - 2] != '.') {
+                        dp[i][j] = dp[i][j - 2];
+                    }
+                    else {
+                        // dp[i][j-2] : 无法匹配
+                        // dp[i][j-1] : 匹配1个
+                        // dp[i-1][j] : 匹配多个a （s串）
+                        dp[i][j] = dp[i][j - 2] || dp[i - 1][j] || dp[i][j - 1]; 
+                    }
+                }
+            }
+        }
+        return dp[m][n];
+    }
+};
+```
+
 ### 55. 跳跃游戏 [Medium]
 - 判断是否可达
 - 可以通过贪心的思路进行处理
