--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -11,6 +11,7 @@
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
   - [剑指offer 43. 1~n整数中1出现的次数](#剑指offer-43-1n整数中1出现的次数)
   - [134. 加油站](#134-加油站)
+  - [135. 分发糖果 **](#135-分发糖果-)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
   - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
@@ -532,6 +533,95 @@ public:
 };
 ```
 
+### 135. 分发糖果 **
+> 有 N 个孩子站成了一条直线，老师会根据每个孩子的表现，预先给他们评分。你需要按照以下要求，帮助老师给这些孩子分发糖果：
+每个孩子至少分配到 1 个糖果。
+评分更高的孩子必须比他两侧的邻位孩子获得更多的糖果。
+那么这样下来，老师至少需要准备多少颗糖果呢？
+
+- 关键的三条规则：
+  - `ratings[i - 1] < ratings[i]`:  `cur[i] = left[i - 1] + 1`
+  - `ratings[i] > ratings[i + 1]`:  `cur[i] = right[i+1] + 1`
+  - 其他情况，直接设为1即可
+- 最基础的做法： 从左到右 + 从右到左进行两次遍历，选择同时满足两个条件的糖果数
+- 时间复杂度O(N) 空间复杂度O(N) 需要进行中间结果的记录
+
+- 关键点： **`两次遍历`** **`对比规则`**
+
+```c++
+class Solution {
+public:
+    int candy(vector<int>& ratings) {
+        int n = ratings.size();
+        int res = 0;
+        vector<int> left(n);
+        for (int i = 0; i < n; i++) {
+            if (i > 0 && ratings[i] > ratings[i - 1]) {
+                left[i] = left[i - 1] + 1;
+            }
+            else {
+                left[i] = 1;
+            }
+        }
+        int right = 1;
+        for (int i = n - 1; i >= 0; i--) {
+            if (i < n - 1 && ratings[i] > ratings[i + 1]) {
+                right++;
+            }
+            else {
+                right = 1;
+            }
+            res += max(right, left[i]);// 
+        }
+        return res;
+    }
+};
+```
+- 继续优化： 尝试一次遍历解决问题
+- 关键在于如何处理右规则，即当`ratings[i] < ratings[i-1]`时如何对左侧位置进行更新？
+  - 进一步分析为下降序列的情况，可以计算当前位置所在的**连续下降序列**的长度`l`，将当前位置的糖果设为1， 再对之前的位置进行补偿： 加上`l`个糖果
+  - 特殊情况： 当连续上升长度和下降长度相等时，**需要把最近的递增序列的最后一个同学也并进递减序列中**： 加上`l+1`个糖果
+```
+【1,2,4,3,2,1】 递增序列长度为3=递减序列长度3：用dec记录下连续递减了几次，评分4后出现3，dec++变为1，给1个；
+                3后出现2，dec++变为2，给2个。2后出现1，dec++变为3，本应给3个，但是因为inc=dec，所以，为了
+                区分评分4和3，还要多给一个给4个，这个4个其实包含下标为3的小朋友的3个和另外多给下标为2的1个。
+
+(递减序列长度：从出现下降元素开始算第一个）。
+【1,2,3,4,3,2】 递增序列长度为4>递减序列长度2：用dec记录下连续递减了几次，评分4后出现3，dec++变为1，给1个；
+                3后出现2，dec++变为2，给2个。这里不需要纠结最后一个小朋友不应该是1个吗？只要是连续下降就好。
+               发完 给他们换一下就好，我们只统计数量
+```
+
+```c++
+class Solution {
+public:
+    int candy(vector<int>& ratings) {
+        int n = ratings.size();
+        int res = 1;
+        int pre = 1; // 当前位置糖果数
+        int inc = 1; // 连续上升序列长度
+        int dec = 0; // 连续下降序列长度
+        for (int i = 1; i < n; i++) {
+            if (ratings[i - 1] <= ratings[i]) {
+                dec = 0;// 更新下降序列长度
+                // 确定当前位置糖数： 相等就直接设为1
+                pre = ratings[i] == ratings[i - 1] ? 1 : pre + 1; 
+                res += pre;
+                inc = pre; // 更新上升序列长度
+            }
+            else {
+                dec++;
+                if (inc == dec) {
+                    dec++;
+                }
+                res += dec;
+                pre = 1; // 当前值设为1
+            }
+        }
+        return res;
+    }
+};
+```
 ## 滑动窗口解题技巧
 
 ### 剑指57-II. 和为s的连续正数序列
