--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -17,6 +17,8 @@
   - [191. 位1的个数](#191-位1的个数)
   - [231. 2的幂](#231-2的幂)
   - [268. 缺失的数字](#268-缺失的数字)
+  - [168. Excel表列名称](#168-excel表列名称)
+  - [171. Excel表列序号](#171-excel表列序号)
   - [405. 数字转十六进制](#405-数字转十六进制)
 - [双指针技巧](#双指针技巧)
   - [11. 盛最多水的容器](#11-盛最多水的容器)
@@ -740,6 +742,61 @@ public:
         }
         return res;
 
+    }
+};
+```
+### 168. Excel表列名称
+```
+    1 -> A
+    2 -> B
+    3 -> C
+    ...
+    26 -> Z
+    27 -> AA
+    28 -> AB 
+    ...
+```
+- 经典进制转换问题, 此处1 对应 A， 是比较特殊的地方；
+  - 为了进行错位，**需要对数字进行减一操作**
+
+```c++
+class Solution {
+public:
+    string convertToTitle(int columnNumber) {
+        string res;
+        while (columnNumber) {
+            columnNumber--; // 关键
+            res.push_back(columnNumber % 26 + 'A');
+            columnNumber /= 26;
+        }
+        reverse(res.begin(), res.end());
+        return res;
+    }
+};
+```
+### 171. Excel表列序号
+```
+    A -> 1
+    B -> 2
+    C -> 3
+    ...
+    Z -> 26
+    AA -> 27
+    AB -> 28 
+    ...
+```
+
+- 与LC168是一套题目
+
+```c++
+class Solution {
+public:
+    int titleToNumber(string columnTitle) {
+        long long res = 0;
+        for (int i = 0; i < columnTitle.size(); i++) {
+            res = res * 26 + (columnTitle[i] - 'A' + 1);
+        }
+        return res;
     }
 };
 ```
