--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -47,6 +47,7 @@
   - [114. 二叉树展开为链表](#114-二叉树展开为链表)
   - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
+  - [530. 二叉搜索树的最小绝对差](#530-二叉搜索树的最小绝对差)
   - [654. 最大二叉树](#654-最大二叉树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
@@ -1071,6 +1072,48 @@ public:
     }
 };
 ```
+### 530. 二叉搜索树的最小绝对差
+> 给你一棵所有节点为**非负值的二叉搜索**树，请你计算树中任意两节点的差的绝对值的最小值
+
+- 由于二叉搜索树的特殊性，本题本质上需要从中序遍历中相邻节点值的差值中找出最小的一个
+  - 二叉搜索树的中序遍历为有序数组，那么可以在遍历中进行差值计算，并进行结果更新
+- 关键点： **`中序遍历`**
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    int ans = INT_MAX;
+    int prev = -1;
+    void getDist(TreeNode* root) {
+        if (!root) return;
+        getDist(root -> left);
+        if (prev == -1) {
+            prev = root -> val;
+        }
+        else {
+            ans = min(ans, root -> val - prev);
+            prev = root -> val;
+        }
+        getDist(root -> right);
+    }
+    int getMinimumDifference(TreeNode* root) {
+        getDist(root);
+        return ans;
+    }
+};
+```
+
 ### 654. 最大二叉树
 
 >  给定一个不含重复元素的整数数组 nums 。一个以此数组直接递归构建的 **最大二叉树** 定义如
