--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -5,6 +5,7 @@
   - [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
   - [70. 爬楼梯问题](#70-爬楼梯问题)
   - [补充问题： 圆环回原点问题](#补充问题-圆环回原点问题)
+  - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
 - [子序和问题](#子序和问题)
   - [53. 最大子序和 *](#53-最大子序和-)
   - [面试题 17.24. 最大子矩阵*](#面试题-1724-最大子矩阵)
@@ -214,6 +215,146 @@ int backToOrigin(int n, int length) {
 ```
 
 
+### 494. 目标和 target sum [Medium]
+- 给定序列，计算仅利用+ -运算组合可以得到的目标值的组合数量
+- DFS搜索所有可能组合，是最为暴力的解题方法
+  - 时间复杂度： O(2^N),N为数组的长度，即组合的数量； 空间复杂度O(N)
+
+```c++
+class Solution {
+public:
+    int count = 0;
+    void dfs(vector<int>& nums, int S, int cur, int i) {
+        if (i == nums.size()) {
+            if (cur == S)
+            count++;
+        }
+        else 
+        {
+            dfs(nums, S, cur + nums[i], i+1);
+            dfs(nums, S, cur - nums[i], i+1);
+        }
+    }
+    int findTargetSumWays(vector<int>& nums, int S) {
+        dfs(nums, S, 0, 0);
+        return count;
+    }
+};
+```
+- 其他方法： 利用动态规划方法，大幅减少搜索空间
+  - `dp[i][j]`定义i个数构成目标值j的组合数量
+  - 状态转移方程：`dp[i][j] = dp[i-1][j-nums[i]] + dp[i-1][j+nums[i]]`
+    - 初始化比较复杂： 由于j- nums[i]可能出现负值，因此需要将遍历空间调大： 增大到`[0,2*sum+1)`的范围；
+    - 同时**初始化最开始的元素取值**：
+      - `dp[0][nums[0]+sum]=1 dp[0][sum -nums[0]]=1`
+      - 还要考虑当`nums[0]=0`的特殊情况，`dp[0][sum]=2`
+    - 时间复杂度： O(N^2), 空间复杂度O(N*max(sum)) N为数组长度
+
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int S) {
+        vector<vector<int> > dp;
+        int sum = 0;
+        for (auto i: nums) {
+            sum += i;
+        }
+        if (sum < S)
+            return 0;
+        for (int i = 0; i < nums.size(); i++) {
+            vector<int> tmp;
+            tmp.assign(2*sum + 1, 0);
+            dp.push_back(tmp);
+        }
+        int t = 2*sum + 1;
+        if (nums[0] == 0) {
+            dp[0][sum] = 2;
+        }
+        else {
+            dp[0][nums[0] + sum] = 1; // init 
+            dp[0][sum - nums[0]] = 1; // init
+        }
+        //cout << t << endl;
+        for (int i = 1; i < nums.size(); i++) {
+            for (int j = 0; j < t; j++ ) {
+                int l = j - nums[i] < 0 ? 0 : j - nums[i];
+                int r = j + nums[i] >= t ? 0 : j + nums[i];
+                //cout << l << r << endl;
+                dp[i][j] = dp[i - 1][l] + dp[i - 1][r];
+            }
+        }
+        return dp[nums.size() - 1][S + sum];
+    }
+};
+```
+- 在上面的基础上，可以对dp数组进行优化，仅利用两个一维数组进行存储。大幅降低空间复杂度
+  - 由于上面的转移方程中仅涉及相邻状态的转换，因此可以利用两个数组进行相对更新存储，在动态规划中十分常见
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int S) {
+        vector<vector<int> > dp;
+        int sum = 0;
+        for (auto i: nums) {
+            sum += i;
+        }
+        if (sum < S)
+            return 0;
+        
+        vector<int> prev;
+        prev.assign(2*sum + 1, 0);
+        vector<int> next;
+        next.assign(2*sum + 1, 0);
+        int t = 2*sum + 1;
+        if (nums[0] == 0) {
+            prev[sum] = 2;
+        }
+        else {
+            prev[nums[0] + sum] = 1; // init 
+            prev[sum - nums[0]] = 1; // init
+        }
+        for (int i = 1; i < nums.size(); i++) {
+            for (int j = 0; j < t; j++ ) {
+                int l = j - nums[i] < 0 ? 0 : j - nums[i];
+                int r = j + nums[i] >= t ? 0 : j + nums[i];
+                next[j] = prev[l] + prev[r];
+            }
+            prev = next;
+        }
+        return prev[S + sum];
+    }
+};
+```
+
+- **更优雅的解法**
+  - 将数组进行转换， 将计算目标转换为 `(target + sum) / 2`, 只用考虑加法运算即可
+  - 本质仍然是 0/1背包问题
+  - 定义当前值的组合数 `dp[j]`  转换方程为：`dp[j] = \sum(dp[j-nums[i]])`
+  - 注意遍历顺序
+
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int target) {
+        int sum = 0;
+        for (int num : nums){
+            sum +=  num;
+        }
+        if((sum + target) % 2 != 0 || sum < target) return 0;
+        int n = nums.size();
+        target = (sum + target) / 2;
+        vector<int>dp(target + 1, 0);
+        dp[0] = 1;
+        
+        for (int i = 0; i < n; i++){
+            for(int j = target; j >= nums[i]; j--){ //从target 倒推
+                 dp[j] += dp[j - nums[i]];
+            }
+        }
+        return dp[target];
+    }
+};
+```
 
 ## 子序和问题
 ### 53. 最大子序和 *
