--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -28,6 +28,7 @@
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
+  - [680. 验证回文串II](#680-验证回文串ii)
   - [132. 分割回文串 II *](#132-分割回文串-ii-)
   - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
@@ -1238,6 +1239,48 @@ public:
         }
         return true;
 
+    }
+};
+```
+### 680. 验证回文串II
+> 给定一个非空字符串 s，最多删除一个字符。判断是否能成为回文字符串
+
+```
+输入: "abca"
+输出: True 你可以删除c字符。
+```
+- 简单的遍历题目，双指针双端遍历即可得到回文串的判断
+  - 本题额外需要考虑删除一个字符的情况，则在遇到不等的情况下进行左/右指针移动后再进行第二次判断即可
+- 关键点； **`两次判断 + 双指针`**
+```c++
+class Solution {
+public:
+    bool helper(string s, int left, int right) {
+        while (left < right) {
+            if (s[left] == s[right]) {
+                left++;
+                right--;
+            }
+            else {
+                break;
+            }
+        }
+        return left >= right;
+    }
+    bool validPalindrome(string s) {
+        int left = 0;
+        int right = s.size() - 1;
+        while (left < right) {
+            if (s[left] == s[right]) {
+                left++;
+                right--;
+            }
+            else {
+                break;
+            }
+        }
+        // cout << left << right;
+        return helper(s, left + 1, right) || helper(s, left, right - 1);
     }
 };
 ```
