--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -1307,14 +1307,15 @@ public:
             mid++;
         }
         int tmp = mid;
-        // 对右子树部分进行扫描，确认是否存在非法情况
+        // 对右子树部分进行扫描，确认是否存在非法情况 
+        // 细节： tmp < right
         while (tmp < right) {
             if (postorder[tmp++] < postorder[right]) 
                 {
                     return false;
                 }
         }
-        // 
+        //  细节： right-1
         return helper(postorder, left, mid - 1) && helper(postorder, mid, right - 1);
     }
 };
@@ -1327,7 +1328,7 @@ public:
     - 更新父节点 root ： 当栈不为空 且 r_i<stack.peek() 时，循环执行出栈，并将出栈节点赋给 rootroot 。
     - 入栈： 将当前节点 r_i入栈；
   - 若遍历完成，则说明后序遍历满足二叉搜索树定义，返回 true。
-```
+```c++
 class Solution {
 public:
     bool verifyPostorder(vector<int>& postorder) {
