--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -59,6 +59,7 @@
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
+  - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
@@ -1540,6 +1541,48 @@ public:
     }
 };
 ```
+
+### 701. 二叉搜索树中的插入操作
+> 输入数据 保证 ，新值和原始二叉搜索树中的任意节点值都不同。
+注意，可能存在多种有效的插入方式，只要树在插入后仍保持为二叉搜索树即可。 你可以返回 任意有效的结果 。
+
+- 与二叉搜索树的删除相比， 插入操作相对比较简单
+- 本质上利用BST的节点大小性质，自顶而下进行遍历，寻找插入方向； 在叶子节点位置创建节点完成插入
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* insertIntoBST(TreeNode* root, int val) {
+        if (!root) {
+            return new TreeNode(val);
+        }
+        if (root -> val > val) {
+            // 往左子树插入
+            root -> left = insertIntoBST(root -> left, val);
+
+        }
+        else {
+            // 往右子树插入
+            root -> right = insertIntoBST(root -> right, val);
+        }
+        return root;
+    }
+};
+```
+
+
+
 
 ### 617. 合并二叉树
 > 给定两个二叉树，想象当你将它们中的一个覆盖到另一个上时，两个二叉树的一些节点便会重叠; 合并的规则是如果**两个节点重叠，那么将他们的值相加作为节点合并后的新值**，否则不为 NULL 的节点**将直接作为新二叉树的节点**。
