--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -38,6 +38,7 @@
   - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串--medium-tencent字节)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
   - [32. 最长有效括号](#32-最长有效括号)
+  - [678. 有效的括号字符串](#678-有效的括号字符串)
   - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
@@ -1734,6 +1735,31 @@ public:
             }
         }
         return ans;
+    }
+};
+```
+### 678. 有效的括号字符串
+> 只包含三种字符的字符串：（ ，） 和 *，写一个函数来检验这个字符串是否为有效字符串
+> * 可以被视为单个右括号 ) ，或单个左括号 ( ，或一个空字符串。
+
+- 利用贪心的思想进行完成，考虑有效括号的特性，即左右括号表示数量一致
+  - 从左向右遍历： left括号(`(` `*`)的数量应该大于`)`的数量
+  - 从右向左遍历： 右括号`)` `*`的数量应该同样大于`(`的数量
+- 时间复杂度 O(N)
+- 关键点： **`贪心 双向遍历`**
+```c++
+class Solution {
+public:
+    bool checkValidString(string s) {
+        int n = s.size();
+        int left = 0;
+        int right = 0;
+        for (int i = 0; i < n; i++) {
+            left += (s[i] == ')') ? -1 : +1; // 统计left出现的次数 自左向右 ( *
+            right += (s[n - 1 - i] == '(') ? -1 : +1; // 自右向左 统计right括号出现的次数： 自右向左 ） *
+            if (left < 0 || right < 0) return false;
+        }
+        return true;
     }
 };
 ```
