--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -22,6 +22,7 @@
   - [405. 数字转十六进制](#405-数字转十六进制)
 - [双指针技巧](#双指针技巧)
   - [11. 盛最多水的容器](#11-盛最多水的容器)
+  - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
   - [16. 最接近的三数之和](#16-最接近的三数之和)
   - [18. 四数之和](#18-四数之和)
@@ -891,6 +892,42 @@ public:
             }
         }
         return ans;
+    }
+};
+```
+
+### 84. 柱状图中的最大面积
+> 给定 n 个非负整数，用来表示柱状图中各个柱子的高度。每个柱子彼此相邻，且宽度为 1 。
+求在该柱状图中，能够勾勒出来的矩形的最大面积
+
+- 最朴素的思路： 对于每个柱子：**找到左右边界得到宽度，然后计算最大面积**
+- 在此思路上进行优化：如何寻找左右边界：
+  - 通过单调递增栈来搜索：当小于栈顶值时进行出栈操作，栈顶元素对应的左右边界可以通过当前新入栈的元素（右边界）以及，栈顶元素的下一个元素(左边界)得到；进而更新值
+  - 特殊情况： **当出栈后栈空时**，需要做特殊处理； 最左侧添加0即可
+  - 特殊情况2: **如果柱状图天然为递增情况**，那么不会有出栈的情况，这种情况下：最右侧添加0即可
+- 关键点： **`单调栈`**  **`数组预处理`**
+```c++
+class Solution {
+public:
+    int largestRectangleArea(vector<int>& heights) {
+        heights.insert(heights.begin(), 0); // 
+        heights.push_back(0); // 
+        int n = heights.size();
+        stack<int> st;
+        int res = 0;
+        for (int i = 0; i < n; i++) {
+            while (!st.empty() && heights[st.top()] > heights[i]) {
+                int cur = st.top();
+                st.pop();
+                int left = st.top() + 1; // 精髓
+                int right = i - 1;
+                // cout << cur << "-" << heights[cur] << " " << (right - left + 1) << " - " << (right - left + 1) * heights[cur] << endl;
+                res = max( (right - left + 1) * heights[cur], res); 
+                //cout << left << " "<< right << endl;
+            }
+            st.push(i);
+        }
+        return res;
     }
 };
 ```
