--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -39,6 +39,7 @@
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
   - [32. 最长有效括号](#32-最长有效括号)
   - [678. 有效的括号字符串](#678-有效的括号字符串)
+  - [71. 简化路径 *](#71-简化路径-)
   - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
@@ -1764,6 +1765,64 @@ public:
 };
 ```
 
+### 71. 简化路径 *
+> 一个字符串 path ，表示指向某一文件或目录的 Unix 风格 绝对路径 （以 '/' 开头），请你将其转化为更加简洁的规范路径。
+
+- 根据linux系统的设计，路径简化是通过栈来完成的
+- 考虑将路径进行切分(`/`)，然后进行逐个遍历
+  - 若遇到`.`/`""`直接跳过
+  - 遇到`..` 需要进行出栈操作，但**需要进行栈空判断** 
+  - 其他情况则正常入栈即可
+- 实现涉及split方法的实现，此处借鉴来网上c++ split方法的实现方法：
+  - 返回`vector<string>`, 通过string.find来完成
+
+- 关键点： **`字符串切割`**  **`栈操作`**
+```c++
+class Solution {
+public:
+    vector<string> split(string s, string pattern) {
+        s += pattern; // 
+        vector<string> res; 
+        int pos = s.find(pattern);
+        while (pos != -1) {
+            res.push_back(s.substr(0, pos));
+            s = s.substr(pos + 1, s.size());
+            pos = s.find(pattern);
+            //cout << (pos);
+        }
+        return res;
+    } 
+    string simplifyPath(string path) {
+        
+        if (path.empty()) return "";
+        vector<string> tmp = split(path, "/");
+        vector<string> res;
+        for (auto p : tmp) {
+            //cout << p << p.length() << endl;
+            if (p == "." || p == "") {
+                continue;
+            }
+            else if (p == ".." ) {
+                if (!res.empty()) {
+                    res.pop_back();
+                } 
+            }
+            else {
+                res.push_back(p);
+            }
+        }
+        string ans = "/";
+        for (int i = 0; i < res.size(); i++) {
+            ans += res[i];
+            if (i != res.size() - 1) {
+                ans += "/";
+            }
+        }
+        return ans;
+    }
+};
+```
+
 ### 224. 基础计算器 [Hard] ***
 - 实现具有加减功能的计算器，考虑`+-` `()`括号的影响
 - **基于栈的结构进行实现**
@@ -2031,7 +2090,7 @@ int find(string& s) {
     - 而应该两个串都遍历到底，并且长出的部分要跟0做对比
     - 在分段遍历过程中**直接累计当前段的数值大小**
 - 时间复杂度O(N) 空间复杂度O(1)
-```
+```c++
 class Solution {
 public:
     int compareVersion(string version1, string version2) {
