update topic : 面积问题

--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -12,6 +12,7 @@
   - [415. 字符串相加](#415-字符串相加)
   - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
   - [补充. 36进制加法 [字节]](#补充-36进制加法-字节)
+  - [306. 累加数](#306-累加数)
   - [344.反转字符串](#344反转字符串)
   - [剑指 Offer 58 - II. 左旋转字符串](#剑指-offer-58---ii-左旋转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
@@ -451,6 +452,75 @@ public:
 };
 ```
 
+### 306. 累加数
+> 一个有效的累加序列必须至少包含 3 个数。除了最开始的两个数以外，字符串中的其他数都等于它之前两个数相加的和。 给定一个只包含数字 '0'-'9' 的字符串，编写一个算法来判断给定输入是否是累加数。
+
+```
+输入: "112358"
+输出: true 
+解释: 累加序列为: 1, 1, 2, 3, 5, 8 。1 + 1 = 2, 1 + 2 = 3, 2 + 3 = 5, 3 + 5 = 8
+```
+
+- 基本思路：
+  - 先确定开头两个字符，然后进行后续判断
+    - **需要考虑到非法字符影响**，不能出现0开头的字符
+  - 在后续迭代遍历中，需要查找和是否存在，使用`find()`来完成，但要保证find的位置从目标位置开始，`find`默认从头开始搜索
+  - 为了避免大数溢出，**直接使用字符串大数加法**
+- 关键点： **`0开头的异常处理`**
+
+```c++
+class Solution {
+public:
+    bool isAdditiveNumber(string num) {
+        int n = num.size();
+        for (int i = 0; i < n - 2; i++) {
+            if (num[0] == '0' && num[i] != '0') {
+                return false; // 外层遇到非法数进行返回
+            }
+            for (int j = i + 1; j < n - 1; j++) {
+                //cout << num.substr(0,i + 1) << "---" << num.substr(i + 1, j - i) << endl;
+                if (num[i + 1] == '0' && num[j] != '0') {
+                    break;// 内层遇到非法进行跳过
+                }
+                
+                if (check(num, num.substr(0,i + 1), num.substr(i + 1, j - i), j + 1))
+                    return true;
+            }
+        }
+        return false;
+    }
+    string addStr(string a, string b) {
+        
+        int i = a.size() - 1;
+        int j = b.size() - 1;
+        int cur = 0;
+        string res;
+        while (i >= 0 || j >= 0 || cur > 0) {
+            int l = i >= 0 ? a[i--] - '0' : 0;
+            int r = j >= 0 ? b[j--] -'0' : 0;
+            //cout << l << r;
+            res.push_back('0' + (l + r + cur) % 10);
+            cur = (l + r + cur) / 10;
+        }
+        
+        reverse(res.begin(), res.end());
+        return res;
+    }
+    bool check(string num, string pre, string cur, int start) {
+        while (start < num.size()) {
+            string next = addStr(pre, cur);
+            
+            if (num.find(next, start) != start) {
+                return false;
+            }
+            start += next.size();
+            pre = cur;
+            cur = next;
+        }
+        return true;
+    }
+};
+```
 
 
 
