--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -123,7 +123,7 @@ public:
 - 时间复杂度 O(N)
 - 关键点： **`快慢指针`**
 
-```
+```c++
 class Solution {
 public:
     ListNode* getKthFromEnd(ListNode* head, int k) {
@@ -276,6 +276,9 @@ public:
 
 ### 160. 相交链表
 > 找到两个单链表相交的起始节点。
+
+- 补充： 如何**判断两个单链表存在相交节点**：
+  - **将A链接在B后，使用双指针判断是否有环**
 
 - 依然是**双指针法** yyds
   - 两个链表的遍历指针`pA` `pB`
