--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -23,6 +23,7 @@
 - [双指针技巧](#双指针技巧)
   - [11. 盛最多水的容器](#11-盛最多水的容器)
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
+  - [85. 最大矩形](#85-最大矩形)
   - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
   - [16. 最接近的三数之和](#16-最接近的三数之和)
   - [18. 四数之和](#18-四数之和)
@@ -74,6 +75,9 @@ public:
 - 螺旋遍历二维数组
   - 循环终止条件：**还有剩余的元素未遍历**
   - **设置4个index 索引来进行**
+- 注意： 在内外循环中都有考虑访问溢出的情况；
+  - 外： num>=1
+  - 内： 每行/列遍历 num>=1
 ```
 class Solution {
 public:
@@ -928,6 +932,61 @@ public:
             st.push(i);
         }
         return res;
+    }
+};
+```
+
+### 85. 最大矩形
+> 给定一个仅包含 0 和 1 、大小为 rows x cols 的二维二进制矩阵，找出只包含 1 的最大矩形，并返回其面积
+
+- 与**最大正方形**相比，计算矩形的面积更为复杂，使用动态规划方法做起来难度陡增
+- 本题更为简单直接的解法为结合[LC84.柱状图的最大面积]将问题做转换
+  - 对于矩阵每行都可以得到相应的高度信息，从而使用单调栈得到当前行对应的最大面积；
+  - 时间复杂度: O(mn)  空间复杂度 O(n)
+  - 理解起来比较简单易懂
+![avtar](./85.png)
+- 关键点： **`问题转换`**  **`单调栈`**
+
+```c++
+class Solution {
+public:
+    int largestRectangleArea(vector<int> heights) {
+        heights.insert(heights.begin(), 0);
+        heights.push_back(0);
+        int ans = 0;
+        stack<int> st;
+        for (int i = 0; i < heights.size(); i++) {
+            while (!st.empty() && heights[i] < heights[st.top()]) {
+                int cur = st.top();
+                st.pop();
+                int left = st.top() + 1; // 左边界
+                int right = i - 1;  // 右边界
+                ans = max(ans, heights[cur] * (right - left + 1));
+            }
+            st.push(i);
+        }
+        //cout << ans << endl;
+        return ans;
+    }
+    int maximalRectangle(vector<vector<char>>& matrix) {
+        if (matrix.empty()) return 0;
+        int rows = matrix.size();
+        int cols = matrix[0].size();
+        vector<int> heights(cols);
+        int ans = 0;
+
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                if (matrix[i][j] == '1') {
+                    heights[j] += 1;
+                }
+                else {
+                    heights[j] = 0;
+                }
+            }
+            ans = max(ans, largestRectangleArea(heights));
+        }
+        return ans;
     }
 };
 ```
