--- a/topics/T2-字符串匹配问题.md
+++ b/topics/T2-字符串匹配问题.md
@@ -3,6 +3,7 @@
     - [1. 思想/定义](#1-思想定义)
     - [KMP算法理解-通俗版*](#kmp算法理解-通俗版)
     - [3. 标准算法定义理解](#3-标准算法定义理解)
+    - [4. 标准代码实现](#4-标准代码实现)
     - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
     - [459. 重复的子字符串](#459-重复的子字符串)
     - [796. 旋转字符串](#796-旋转字符串)
@@ -70,7 +71,7 @@ vector<int> getNext(string ps) {
   - 因为要找前面字符串的最长相同的前缀和后缀，所以要看前一位的前缀表的数值。
   - 代码中`query[i] != pattern[j+1] => j = next[j]`
 - 前缀表计算；next
-```c++
+
 ```c++
 vector<int> getNext(string ps) {
     vector<int> next(ps.size(), -1); // 初始化首字符回退-1 设为0也可
@@ -86,13 +87,13 @@ vector<int> getNext(string ps) {
     return next;
 }
 ```
-```
 
 ### 4. 标准代码实现
 
 - 完整KMP代码如下： **建议全文背诵**
     - 匹配过程与取next过程基本一致，按照相同逻辑进行模式串回退即可
     - 时间复杂度O(N) 空间复杂度O(N)
+
 ```c++
 class Solution {
 public:
