--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -30,6 +30,7 @@
   - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
   - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
+  - [27. 移除元素](#27-移除元素)
   - [283. 移动零](#283-移动零)
   - [88. 合并两个有序数组](#88-合并两个有序数组)
   - [349. 两个数组的交集](#349-两个数组的交集)
@@ -1230,6 +1231,26 @@ public:
     }
 };
 ```
+### 27. 移除元素
+> 给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并 原地 修改输入数组。
+
+- 双指针基本操作
+
+```c++
+class Solution {
+public:
+    int removeElement(vector<int>& nums, int val) {
+        int left = 0;
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] != val) {
+                nums[left++] = nums[i];
+            }
+        }
+        return left;
+    }
+};
+```
 
 ### 283. 移动零
 > 给定一个数组 nums，编写一个函数将所有 0 移动到数组的末尾，同时保持非零元素的相对顺序。
@@ -1243,7 +1264,7 @@ public:
 - 与剑指21等题目十分相似
 
 
-```
+```c++
 class Solution {
 public:
     void moveZeroes(vector<int>& nums) {
